RESOLVED FIXED295177
REGRESSION(294049@main): `document.timeline.currentTime` never advances
https://bugs.webkit.org/show_bug.cgi?id=295177
Summary REGRESSION(294049@main): `document.timeline.currentTime` never advances
Antoine Quint
Reported 2025-06-29 07:16:50 PDT
The behavior of `document.timeline.currentTime` changed significantly with 294049@main in that after it's been queried once, it never advances again, unless animations are updated. But if there are no animation updates and we just check that value continuously in a `setInterval` loop, that value is frozen forever. This manifests itself for instance if the bounds of an animated element using a `transform` animation need to be checked in-flight, for instance if `focus()` is called on a child element to determine whether it needs to be scrolled into view, since the animation will be fully accelerated and won't schedule animation updates.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-06-29 07:17:06 PDT
Antoine Quint
Comment 2 2025-06-29 16:37:53 PDT
EWS
Comment 3 2025-07-02 00:16:22 PDT
Committed 296903@main (64e4b8136112): <https://commits.webkit.org/296903@main> Reviewed commits have been landed. Closing PR #47359 and removing active labels.
Antoine Quint
Comment 4 2025-07-04 04:07:19 PDT
The new test added for this bug is a failure on Intel Macs, I filed bug 295457 about that.
Note You need to log in before you can comment on or make changes to this bug.